# aulaflow

./: .env.example  .gitignore  README.md  package-lock.json  package.json
apps/solver-api/: README.md  pyproject.toml  requirements.txt
apps/solver-api/app/: __init__.py  main.py  models.py  solver.py
apps/solver-api/tests/: test_solver.py
apps/web/: eslint.config.mjs  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/assignment-runs/: route.ts
apps/web/src/app/api/assignments/run/: route.ts
apps/web/src/app/api/imports/approve/: route.ts
apps/web/src/app/api/imports/solve/: route.ts
apps/web/src/app/assignment-runs/: page.tsx
apps/web/src/app/imports/: page.tsx
apps/web/src/app/imports/[id]/review/: page.tsx
apps/web/src/components/: assignment-dashboard.tsx  assignment-runs-client.tsx  import-review-client.tsx  imports-client.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  table.tsx
apps/web/src/lib/: assignment-run-demo-data.ts  demo-data.ts
apps/web/src/lib/imports/: import-parser.test.ts  import-parser.ts  import-storage.ts  import-types.ts
apps/web/src/lib/server/: assignment-run-service.ts  db.ts
docs/: ARCHITECTURE.md  DATA_MODEL.md  IMPORTS.md  ROADMAP.md  RULES.md
supabase/: README.md  seed.sql
supabase/migrations/: 20260518120000_initial_schema.sql
